WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53048
Scrollbars don't work correctly for top-to-bottom text in an overflow: scroll area
https://bugs.webkit.org/show_bug.cgi?id=53048
Summary
Scrollbars don't work correctly for top-to-bottom text in an overflow: scroll...
Sam Weinig
Reported
2011-01-24 15:44:48 PST
Created
attachment 79984
[details]
Test Scrollbars don't work correctly for top-to-bottom text in an overflow: scroll area
Attachments
Test
(1.05 KB, text/html)
2011-01-24 15:44 PST
,
Sam Weinig
no flags
Details
Patch
(3.88 KB, patch)
2011-01-25 20:53 PST
,
Sam Weinig
sam
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2011-01-25 20:53:02 PST
Created
attachment 80165
[details]
Patch
Sam Weinig
Comment 2
2011-01-25 20:58:00 PST
Comment on
attachment 80165
[details]
Patch Hyatt r+'d this.
Sam Weinig
Comment 3
2011-01-25 21:02:33 PST
Landed in
r76669
.
WebKit Review Bot
Comment 4
2011-01-25 21:32:58 PST
http://trac.webkit.org/changeset/76669
might have broken Qt Linux Release The following tests are not passing: fast/overflow/overflow-rtl-vertical-origin.html
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug