Scrollbars don't work correctly for top-to-bottom text in an overflow: scroll area https://bugs.webkit.org/show_bug.cgi?id=53048

Reviewed by David Hyatt.

Source/WebCore:

Test: fast/overflow/overflow-rtl-vertical-origin.html

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::scrollPosition):
(WebCore::RenderLayer::updateScrollInfoAfterLayout):
Take the scroll origin into account when calculating scrollbars in more places.

LayoutTests:

* fast/overflow/overflow-rtl-vertical-origin-expected.txt: Added.
* fast/overflow/overflow-rtl-vertical-origin.html: Added.



Canonical link: https://commits.webkit.org/66891@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76669 268f45cc-cd09-0410-ab3c-d52691b4dbfc